<resources>
    <string name="app_name">UTS PTIK B</string>
    <string name="judul">UJIAN TENGAH SEMESTER \n PEMROGRAMAN PERANGKAT MOBILE \n 30 MARET 2022</string>
    <string name="biodata">Muh Isbut Tahlil \n \n 1729042072</string>
    <string name="program">PROGRAM HITUNG \n LUAS SEGITIGA</string>
    <string name="hint_alas">Masukkan alas segitiga</string>
    <string name="hint_tinggi">Masukkan tinggi segitiga</string>
    <string name="button_hitung">HITUNG LUAS SEGITIGA</string>
</resources>