<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarTrackVertical="@drawable/maxresdefault">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="297dp"
            android:layout_height="77dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/judul"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="101dp"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.261"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:srcCompat="@drawable/_626663345290_pas_foto" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="126dp"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:text="@string/biodata"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="258dp"
            android:layout_height="57dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/program"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editAlas"
            android:layout_width="251dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_alas"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTinggi"
            android:layout_width="251dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_tinggi"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAlas" />

        <Button
            android:id="@+id/buttonHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_hitung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTinggi" />

        <TextView
            android:id="@+id/luas"
            android:layout_width="123dp"
            android:layout_height="52dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text=""
            android:textColor="#673AB7"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHitung"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="393dp"
            android:layout_height="136dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_jtik8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
